<resources>
    <string name="app_name">seed</string>

    <string name="calendar">학사일정</string>
    <string name="meal">식단</string>
    <string name="schedule">시간표</string>
    <string name="notice">공지사항</string>
    <string name="setting">설정</string>

    <!-- academic_calendar strings -->
    <string name="fg_cal_mon">2020 07</string>
    <string name="fg_cal_pre">P</string>
    <string name="fg_cal_next">N</string>

    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>

    <!-- class_schedule strings -->
    <string name="class1">1</string>
    <string name="class2">2</string>
    <string name="class3">3</string>
    <string name="class4">4</string>
    <string name="class5">5</string>
    <string name="class6">6</string>
    <string name="class7">7</string>
    <string name="class8">8</string>
    <string name="class9">9</string>
    <string name="class10">10</string>

    <string name="days">요일</string>
    <string name="periods">교시</string>
    <string name="className">이름</string>
    <string name="classNameHint">수업의 이름을 적어주세요.</string>

    <string name="class_name">수업 이름</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="insert">일정 추가</string>

    <!-- meal_service strings -->
    <string name="month">월</string>
    <string name="day">일</string>

    <!-- setting strings -->
    <string name="widget_setting">위젯 설정</string>
    <string name="inapp_payment">인앱 결제</string>
    <string name="opinion_evaluation">의견 및 평가</string>
    <string name="licenses">라이센스</string>
    <string name="on_off">위젯 온/오프</string>
    <string name="remove_advertising">광고 제거</string>
    <string name="opinion">앱 평가하기</string>
    <string name="evaluation">개발자에게 의견 보내기</string>
    <string name="license">사용한 라이센스</string>

    <!-- notice strings -->
    <string name="notice_number">1</string>
    <string name="notice_title">청소년 도박문제에 대한 인식증진과 개선을 위한 공모전 안내</string>
    <string name="notice_write">작성자: </string>
    <string name="notice_writer">이영옥</string>
    <string name="notice_day">2020-08-21</string>
</resources>
