<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.AcademicCalendarF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rectangle_background"
                android:gravity="top|center"
                android:layout_gravity="start"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/fg_cal_pre"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/left"
                    android:tint="@color/AppColor2" />

                <TextView
                    android:id="@+id/fg_cal_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/cafe24dangdanghae"
                    android:gravity="center"
                    android:text="@string/fg_cal_mon"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="19sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/fg_cal_next"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/right"
                    android:textSize="15sp"
                    android:tint="@color/AppColor2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_background"
            android:gravity="top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cafe24dangdanghae"
                    android:gravity="center"
                    android:text="@string/sun"
                    android:textColor="@color/grayColor4"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cafe24dangdanghae"
                    android:gravity="center"
                    android:text="@string/mon"
                    android:textColor="@color/grayColor4"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cafe24dangdanghae"
                    android:gravity="center"
                    android:text="@string/tue"
                    android:textColor="@color/grayColor4"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cafe24dangdanghae"
                    android:gravity="center"
                    android:text="@string/wed"
                    android:textColor="@color/grayColor4"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cafe24dangdanghae"
                    android:gravity="center"
                    android:text="@string/thu"
                    android:textColor="@color/grayColor4"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/classTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cafe24dangdanghae"
                    android:gravity="center"
                    android:text="@string/fri"
                    android:textColor="@color/grayColor4"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cafe24dangdanghae"
                    android:gravity="center"
                    android:text="@string/sat"
                    android:textColor="@color/grayColor4"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fg_cal_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    tools:itemCount="42"
                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/cal_item"
                    tools:orientation="vertical"
                    tools:scrollbars="vertical"
                    tools:spanCount="7" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>