<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meal_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/meal_month"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="15dp"
            android:text="@string/day"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="bottom"
            android:fontFamily="@font/cafe24dangdanghae"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/meal_title_month"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/month"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            android:fontFamily="@font/cafe24dangdanghae"/>

        <TextView
            android:id="@+id/meal_title"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:text="@string/day"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            android:textStyle="bold"
            android:fontFamily="@font/cafe24dangdanghae"/>

        <TextView
            android:id="@+id/meal_title_day"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/day"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            android:fontFamily="@font/cafe24dangdanghae"/>

    </LinearLayout>

    <TextView
        android:id="@+id/meal_contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:text="@string/meal"
        android:textSize="20sp"
        android:fontFamily="@font/cafe24ohsquareair"/>

    <View
        android:id="@+id/mealItemView1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/main_menu"
        app:layout_constraintEnd_toEndOf="@+id/vp_ac_main_frag_pager"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>